--- a/webpack-demo/package.json
+++ b/webpack-demo/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "watch": "webpack --watch --mode=development",
+    "build": "webpack --mode=production"
   },
   "keywords": [],
   "author": "",
@@ -13,4 +14,10 @@
     "webpack": "^5.44.0",
     "webpack-cli": "^4.7.2"
   }
+}
+
+{
+  "browserslist": [
+    "defaults"
+  ]
 }
