--- a/webpack-demo/package.json
+++ b/webpack-demo/package.json
@@ -3,23 +3,21 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "webpack": "^5.44.0",
     "webpack-cli": "^4.7.2"
-  }
-}
-{
+  },
+
   "browserslist": [
     "defaults"
   ],
   "scripts": {
     "watch": "webpack --watch --mode=development",
-    "build": "webpack --mode=production"
-  },
+    "build": "webpack --mode=production",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  }
 }
